--- a/weapp/member/templates/member/editor/member_detail.html
+++ b/weapp/member/templates/member/editor/member_detail.html
@@ -82,8 +82,8 @@
       		<div class="xui-value">
 	      		<span class="xa-isEdited hidden">
 	      			<input name="sex_type" type="radio" value="1" {% ifequal show_member_info.sex 1 %}checked {% endifequal %}/><span class="ml5">男</span>
-							<input name="sex_type" type="radio" value="2" {% ifequal show_member_info.sex 2 %}checked {% endifequal %} class="ml10"/>	<span class="ml5">女</span>
-							<input class="ml10" name="sex_type" type="radio" value="0" {% ifequal show_member_info.sex 0 %}checked {% endifequal %}/><span class="ml5">未知</span>
+							<input name="sex_type" type="radio" value="2" {% ifequal show_member_info.sex 2 %}checked {% endifequal %} class="ml20"/>	<span class="ml5">女</span>
+							<input class="ml20" name="sex_type" type="radio" value="0" {% ifequal show_member_info.sex 0 %}checked {% endifequal %}/><span class="ml5">未知</span>
 						</span>
 						<span class="xa-display">{% if show_member_info.sex == 1 %}男{% elif show_member_info.sex == 2 %}女{% else %}未知{% endif %}</span>
 					</div>
@@ -570,14 +570,26 @@
 	</table>
 </script>
 <script id="mall-member-transmission-view" type="text/x-jquery-tmpl">
-	<table class="table table-bordered xb-noTdLRBorder xb-theadBg">
+	<table class="table table-bordered xb-noTdLRBorder xb-theadBg xui-transmission">
 		<thead>
-			<th width="220">分享链接</th>
-			<th width="280">点击</th>
-			<th width="230">关注转化</th>
-			<th>购买转化</th>
+			<th width="450">分享链接</th>
+			<th width="150">点击</th>
+			<th width="130">关注转化</th>
+			<th width="250">购买转化</th>
 		</thead>
 		<tbody>
+			<tr>
+				<td>blah~blah~~</td>
+				<td>10</td>
+				<td>20</td>
+				<td>0</td>
+			</tr>
+			<tr>
+				<td>blah~blah~~</td>
+				<td>10</td>
+				<td>20</td>
+				<td>0</td>
+			</tr>
 			<tr>
 				<td>blah~blah~~</td>
 				<td>10</td>
