列表无数据样式调整

--- a/weapp/member/templates/member/editor/member_detail.html
+++ b/weapp/member/templates/member/editor/member_detail.html
@@ -572,7 +572,7 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td><span class="xui-color-blue xui-bold"><a href="/mall2/order/?order_id={{order.id}}" target="_blank">{{order.order_id}}</a><span></td>
+				<td><span class="xui-color-blue xui-bold"><a href="/mall2/order/?order_id=${order_id}" target="_blank">${order_id}</a><span></td>
 				<td>0.50</td>
 				<td>2016/03/28 20:08</td>
 				<td>已取消</td>
@@ -589,6 +589,7 @@
 				<td>2016/03/28 20:08</td>
 				<td>已取消</td>
 			</tr>
+			<!-- <tr rowspan='6' ><td colspan='4' class="h130 xui-fontGary" >暂无数据</td></tr> -->
 		</tbody>
 	</table>
 </script>
@@ -619,6 +620,7 @@
 				<td>20</td>
 				<td>0</td>
 			</tr>
+			<!-- <tr rowspan='6' ><td colspan='4' class="h130 xui-fontGary" >暂无数据</td></tr> -->
 		</tbody>
 	</table>
 </script>
