Revert "Merge branch 'master' of http://git.weizzz.com:8082/weizoom/Weapp"
This reverts commit 4a6fdb80d230620261dab401c7254e1d9bcd1ce2, reversing
changes made to 103ec03e54ef3881d8e1646d5f7a1930d38cb6a8.

--- a/weapp/card/templates/card/editor/list_weizoom_card.html
+++ b/weapp/card/templates/card/editor/list_weizoom_card.html
@@ -1,28 +1,7 @@
 {% extends "card_base.html" %}
 {% load common_tag %}
 {% load account_filter %}
-{% block css %}
-<style type="text/css">
-    .belong_to_owner_name{
-        display:inline-block;
-        width:96px;
-        float:left;
-        marginBottom:5px;
-        textAlign:center;
-        color: #333;
-    }
-    .belong_to_owner_div{
-        border: 1px solid gray;
-        width: 300px;
-        /*height: 50px;*/
-        position: absolute;
-        background-color: #FFF;
-        padding: 5px 0px;
-        z-index: 9999;
-        left: -100px;
-    }
-</style>
-{% endblock %}
+
 {% block content-panel %}
     <div class="relative">
         <ul class="breadcrumb">
@@ -64,26 +43,6 @@
         class="panel-body">
     </div>
 </div>
-<div id="ownerSpecial" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content" style="top:200px">
-            <div class="modal-header" style="color:#fff;line-height:38px;font-size:14px">
-                <span>已有专属商家</span>
-            </div>
-            <div class="modal-body">
-              <div style="max-height:450px;overflow-y:scroll" class="show_ownerSpecial">
-              <div style="clear: both"></div></div>
-            </div>
-            <div class="modal-footer tc">
-                <button class="btn btn-cancel" data-dismiss="modal">取消</button>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="belong_to_owner" style="display:none;">
-    <div class="belong_to_owner_div" style="">
-    </div>
-</div>
 {% endblock %}
 
 
@@ -123,9 +82,7 @@
                                 <div>通用卡</div>
                             {{/if}}
                             <div>${card_rule.card_type}</div></td>
-                        <td>{{if card_rule.belong_to_owner.length>0}}<button class="btn btn-primary" style="position: relative;" onClick="show_belong_to_owner(this,'${card_rule.belong_to_owner}');">查看专属商家
-                                <div class="belong_to_dialog" style="display:none"></div>
-                            </button>{{/if}}</td>
+                        <td>${card_rule.belong_to_owner}</td>
                         <td>${card_rule.card_range}</td>
                         <td>${card_rule.valid_time_from}</br>${card_rule.valid_time_to}</td>
                         <td style="max-width:150px;">${card_rule.remark}</td>
@@ -376,21 +333,5 @@
 
             $div.data('view', advancedTable);
         });
-    function show_belong_to_owner(that,owner){
-            var attr = $(that).children('.belong_to_dialog').attr('style');
-            owner = owner.split(",");
-            $('.belong_to_owner div').html('');
-            for(i in owner){
-                $('.belong_to_owner div').append('<span class="belong_to_owner_name" style="display:inline-block;width:96px;float:left;marginBottom:5px;textAlign:center;color: #333;">'+ owner[i] +'</span>');
-            }
-            $('.belong_to_owner div').append();
-            if(attr && attr.indexOf('none')!=-1){
-                var belong_to_owner_html = $('.belong_to_owner').show();
-                $(that).children('.belong_to_dialog').html(belong_to_owner_html).show();
-            }else{
-                $(that).children().hide();
-            }
-        }
-
     </script>
 {% endblock %}
