--- a/weapp/card/templates/card/editor/edit_weizoom_card_rule.html
+++ b/weapp/card/templates/card/editor/edit_weizoom_card_rule.html
@@ -12,45 +12,6 @@
     .ui-timepicker-div td { font-size: 90%; } 
     .ui-tpicker-grid-label { background: none; border: none; margin: 0; padding: 0; }
     .errorHint{width: 260px;}
-    .xui-owner_list{
-        float: left;
-        margin-right: 20px;
-    }
-    .xui_all_select{
-    float: right;
-    padding-right: 10px;
-    }
-    .show_bussiness_div{
-        background-attachment: scroll;
-        background-clip: border-box;
-        background-color: #799fce;
-        background-image: none;
-        background-origin: padding-box;
-        background-position: 0 0;
-        background-repeat: repeat;
-        background-size: auto auto;
-        color: #fff;
-        float: left;
-        height: 26px;
-        line-height: 12px;
-        margin-left: 10px;
-        margin-top: 5px;
-        min-width: 75px;
-        padding-top: 7px;
-        text-align: center;    
-    }
-    .x_deleteTempPattern {
-    cursor: pointer;
-    float: left;
-    font-size: 26px;
-    margin-top: -12px;
-    text-align: center;
-    transform: rotate(45deg);
-    vertical-align: middle;
-    width: 20px;
-    margin-left: -12px;
-    margin-top: -13px;
-}
 </style>
 
 <div class="xui-editProductPage">
@@ -103,24 +64,25 @@
                         <option value="0">通用卡</option>
                         <option value="1">专属卡</option>
                     </select>
-                    <div class="errorHint" style="display:none">请选择一个选项</div>
+                    <div class="errorHint"></div>
                 </div>
             </div>
 
             <div id="owner_special" class="form-group" style="display: none">
                 <label class="control-label fl" for="parents_name">专属商家：</label>
-                <div class="col-sm-2 fl pl5" style="width: auto;margin-top: 4px;color: #0099ff;cursor: pointer;">
-                     <span class="add_bussiness_span" data-toggle="modal" data-target="#ownerSpecial" onClick =show_checked_buss()>添加商家</span>
-                     <div class="errorHint" style="display:none;position: absolute;">请选择一个选项</div>
+                <div class="col-sm-2 fl pl5" style="width: auto;">
+                    <select type="text" class="input-xlarge" name="belong_to_owner" data-validate="require-select">
+                        <option value="-1">请选择</option>
+                        {% for owner in belong_to_owner %}
+                            <option value="{{ owner.user_id }}">{{ owner.mpuser_name }}</option>
+                        {% endfor %}
+                    </select>
+                    <div class="errorHint" style="width: auto"></div>
                 </div>
-                <div class="checkbox" style="float: left;width: 10%;padding-top:4px">
+                <div class="checkbox" style="float: left;width: 10%;">
                     <label>
                         <input type="checkbox" name="is_new_member_special" style="margin-top: 2px"> 新会员专属
                     </label>
-                </div>
-            </div>
-            <div class="form-group ">
-                <div class="add_bussiness_div" style="margin-left: 130px;width: 800px;">                    
                 </div>
             </div>
 			<div class="form-group ">
@@ -148,7 +110,7 @@
             <div class="form-group ">
                 <label class="control-label fl" for="parents_name">数&nbsp;&nbsp;&nbsp;&nbsp;量：</label>
                 <div class="col-sm-2 fl pl5">
-                    <input type="text" class="form-control w106" name="number" placeholder=" " data-validate="require-positive-int"/>
+                    <input type="text" class="form-control w106" name="number" placeholder=" " data-validate="require-int"/>
                     <div class="errorHint"></div>
                 </div>
                 <span style="position: absolute;left: 320px;">张</span>
@@ -176,13 +138,13 @@
                 </div>
 
                 <div class="col-sm-2 fl pl5">
-                    <span style="width:10px;position:absolute;top:0px;left:10px;">至</span>
+                    <span style="width:10px;z-index:9999;position:absolute;top:0px;left:10px;">至</span>
                     <input 
                         type="text" 
                         class="input-xlarge form-control" 
                         id="valid_time_to" 
                         name="valid_time_to" 
-                        style="width:160px;position:absolute;top:0px;left:40px;"
+                        style="width:160px;z-index:9999;position:absolute;top:0px;left:40px;"
                         placeholder="" 
                         value="{% if weizoom_card_rule %}{{weizoom_card_rule.valid_time_to|date:"Y-m-d"}}{% endif %}"
                         readonly="readonly" 
@@ -215,59 +177,11 @@
         </fieldset>
     </form>
 </div>
-<div id="ownerSpecial" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content" style="top:200px">
-            <div class="modal-header" style="color:#fff;line-height:38px;font-size:14px">
-                <span class="xui_all_select">
-                    <input type="checkbox" id="all_select_checked" name="all_select_checked"/>
-                    <span>全选</span>
-                </span>
-                <span>请选择商家</span>
-            </div>
-            <div class="modal-body">
-              <div style="max-height:450px;overflow-y:scroll">
-                  {% for owner in belong_to_owner %}
-                        <div  class="xui-owner_list">
-                             <input type="checkbox" name="select_checked" id="{{ owner.user_id }}"/>
-                            <span id="{{ owner.user_id }}">{{ owner.mpuser_name }}</span>
-                        </div>
-                        {% endfor %}
-              <div style="clear: both"></div></div>
-            </div>
-            <div class="modal-footer tc">
-                <button type="button" class="btn btn-success" onClick=save_checked_owner()>确定</button>
-                <button class="btn btn-cancel" data-dismiss="modal" onClick=cancle_checked_owner()>取消</button>
-            </div>
-        </div>
-    </div>
-</div>
 {% endblock %}
 
 {% block js %}
 <script>
-var c=0
 $(document).ready(function() {
-    
-    $("#all_select_checked").click(function(){
-            $('[name=select_checked]:checkbox').attr('checked',this.checked);
-            if(!this.checked){
-                c=0
-            }
-            else{
-                c=$('[name=select_checked]:checkbox').length
-            }
-        })    
-    $('[name=select_checked]:checkbox').click(function(){
-        $(this).attr('checked',this.checked);
-        if(!$(this).attr('checked')){
-            c--
-        }
-        else{
-            c++
-        }
-        is_checked_all(c)
-    })
     $('input[data-ui-role="date_time_picker"]').each(function() {
             var $datetimepicker = $(this);
             var format = $datetimepicker.attr('data-format');
@@ -328,10 +242,8 @@ $(document).ready(function() {
     $('[name="card_attr"]').change(function(){
         if ($(this).val() == 1){
             $('#owner_special').css('display','block');
-            $('.add_bussiness_div').css('display','block');
         }else{
             $('#owner_special').css('display','none');
-            $('.add_bussiness_div').css('display','none');
         }
     });
 	$('[name="full_use"]').change(function(){
@@ -372,26 +284,11 @@ $(document).ready(function() {
             W.showHint('error','备注最多输入20个字符！');
             return false;
         }
-        var money = $('[name="money"]').val();
-        if (money> 999999999){
-            W.showHint('error','价格不正确，请输入0-999999999之间的价格');
-            return false;
-        }
-        var $checked_owner=$('div.show_bussiness_div');
-        var card_attr = $('[name="card_attr"]').val();
-        if(card_attr==1 && $checked_owner.length==0 ){
-            $('.add_bussiness_span +div').show()
-            return false;
-        }
-        else{
-            $('.add_bussiness_span +div').hide()
-        }
         $('#submitBtn').attr('disabled', true);
         if (!W.validate()) {
             $('#submitBtn').prop('disabled', false);
             return false;
         }
-
         createCards();
         return false;
     });
@@ -409,20 +306,10 @@ $(document).ready(function() {
         var expired_minute = $('[name="expired_minute"]').val();
         var card_type = $('[name="type"]').val();
         var card_attr = $('[name="card_attr"]').val();
+        var belong_to_owner = $('[name="belong_to_owner"]').val();
         var is_new_member_special = $('[name="is_new_member_special"]').attr('checked');
 		var full_use_value = $('[name="full_use_value"]').val();
-        var belong_to_owner_ids=[]
-        var $checked_owner=$('div.show_bussiness_div');
-        if($checked_owner.length>0 &&card_attr==1){
-            $('.add_bussiness_span +div').hide()
-            $checked_owner.each(function(){
-                belong_to_owner_ids.push(parseInt($(this).attr('id')))
-            })
-        }
-        else{
-            belong_to_owner_ids.push(-1)
-        }
-        console
+
         W.getApi().call({
             app: 'card',
             api: 'weizoom_cards/create',
@@ -435,7 +322,7 @@ $(document).ready(function() {
                 valid_time_to: valid_time_to,
                 card_type: card_type,
                 card_attr: card_attr,
-                belong_to_owner:  JSON.stringify(belong_to_owner_ids),
+                belong_to_owner: belong_to_owner,
                 is_new_member_special: is_new_member_special,
 				full_use_value: full_use_value
             },
@@ -451,69 +338,5 @@ $(document).ready(function() {
             }
         });
     }
-function save_checked_owner(){
-    $(".add_bussiness_div").html('')
-    $('.add_bussiness_span +div').hide()
-    suripers={}
-    var $checked_owner=$('div .xui-owner_list');
-    $checked_owner.each(function(){
-        if($(this).children('input').attr("checked")=='checked'){
-            suripers[$(this).children('span').attr("id")]=$(this).children('span').html()
-        }
-    })
-    if(suripers){
-        for (i in suripers){
-            $(".add_bussiness_div").append('<div><div class="fl show_bussiness_div" id="'+i+'">'+suripers[i]+'</div><div class="x_deleteTempPattern" onClick=display_detele('+i+')>+</div></div>')
-        }
-    }
-    $('#ownerSpecial').modal('hide');
-}
-function display_detele(i){
-    var $show_bussiness_div=$('div.show_bussiness_div');
-        if($show_bussiness_div){
-            $show_bussiness_div.each(function(){
-                if($(this).attr('id')==i){                    
-                    $(this).parent().remove()
-                }
-            })
-        }
-        var $checked_owner_input=$('div.xui-owner_list input');
-        $checked_owner_input.each(function(){
-                if($(this).attr('id')==i){                   
-                    $(this).removeAttr('checked')
-                }
-        })
-        $("#all_select_checked").removeAttr('checked')
-}
-function cancle_checked_owner(){
-        c=0
-        $("#all_select_checked").removeAttr('checked')
-        $('[name=select_checked]:checkbox').removeAttr('checked')
-}
-function show_checked_buss(){
-    c=0
-    $show_bussiness_div=$('div.show_bussiness_div');
-    if($show_bussiness_div.length>0){
-        $show_bussiness_div.each(function(){
-            var show_bussiness_div_id=$(this).attr('id')
-            $('[name=select_checked]:checkbox').each(function(){
-                if($(this).attr('id')==show_bussiness_div_id){                   
-                    $(this).attr('checked','checked')
-                    c++
-                }
-            })
-        })
-    }
-    is_checked_all(c)
-}
-
-function is_checked_all(c){
-    if(c==$('[name=select_checked]:checkbox').length){
-        $("#all_select_checked").attr('checked','checked');
-    }
-    else{
-        $("#all_select_checked").removeAttr('checked')
-    }
-}
 </script>
 {% endblock %}
