--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -2,8 +2,12 @@
 {% load common_tag %}
 {% block css%}
 <!--日期选择器样式-->
-<link type="text/css" rel="stylesheet" href="/termite_static/v3/css/mobiscroll.css">
-<link type="text/css" rel="stylesheet" href="/termite_static/v3/css/mobiscroll_date.css">
+<!-- <link type="text/css" rel="stylesheet" href="/termite_static/v3/css/mobiscroll.css">
+<link type="text/css" rel="stylesheet" href="/termite_static/v3/css/mobiscroll_date.css"> -->
+<link href="/termite_static/v3/mobiscroll/css/mobiscroll.frame.css" rel="stylesheet" type="text/css" />
+<link href="/termite_static/v3/mobiscroll/css/mobiscroll.frame.ios.css" rel="stylesheet" type="text/css" />
+<link href="/termite_static/v3/mobiscroll/css/mobiscroll.scroller.css" rel="stylesheet" type="text/css" />
+<link href="/termite_static/v3/mobiscroll/css/mobiscroll.scroller.ios.css" rel="stylesheet" type="text/css" />
 <style>
 	html,body{
 		background: #ececec;
@@ -197,9 +201,16 @@
 {% endblock %}
 
 {% block js %}
-<script type="text/javascript" src="/termite_static/jquery/jquery-1.9.1.min.js"></script>
+<!-- <script type="text/javascript" src="/termite_static/jquery/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="/termite_static/v3/mobile_datetime/mobiscroll_date.js"></script>
-<script type="text/javascript" src="/termite_static/v3/mobile_datetime/mobiscroll.js"></script>
+<script type="text/javascript" src="/termite_static/v3/mobile_datetime/mobiscroll.js"></script> -->
+<script type="text/javascript" src="/termite_static/v3/mobiscroll/js/mobiscroll.zepto.js"></script>
+<script type="text/javascript" src="/termite_static/v3/mobiscroll/js/mobiscroll.core.js"></script>
+<script type="text/javascript" src="/termite_static/v3/mobiscroll/js/mobiscroll.frame.js"></script>
+<script type="text/javascript" src="/termite_static/v3/mobiscroll/js/mobiscroll.scroller.js"></script>
+<script type="text/javascript" src="/termite_static/v3/mobiscroll/js/mobiscroll.util.datetime.js"></script>
+<script type="text/javascript" src="/termite_static/v3/mobiscroll/js/mobiscroll.datetimebase.js"></script>
+<script type="text/javascript" src="/termite_static/v3/mobiscroll/js/mobiscroll.datetime.js"></script>
 <script>
 	$(document).ready(function(){
 		var width=document.body.clientWidth;
@@ -245,24 +256,42 @@
 			$('#endDate').val('');
 		});
 
-		var currYear = (new Date()).getFullYear();	
-		var opt={};
-		opt.date = {preset : 'date'};
-		opt.datetime = {preset : 'datetime'};
-		opt.time = {preset : 'time'};
-		opt.default = {
-			theme: 'android-ics light', //皮肤样式
-			display: 'modal', //显示方式 
-			mode: 'scroller', //日期选择模式
-			dateFormat: 'yyyy-mm-dd',
-			lang: 'zh',
-			showNow: true,
-			nowText: "今天",
-			startYear: currYear - 10, //开始年份
-			endYear: currYear + 10 //结束年份
-		};
-		$("#startDate").mobiscroll($.extend(opt['date'], opt['default']));
-		$("#endDate").mobiscroll($.extend(opt['date'], opt['default']));
+		// var currYear = (new Date()).getFullYear();	
+		// var opt={};
+		// opt.date = {preset : 'date'};
+		// opt.datetime = {preset : 'datetime'};
+		// opt.time = {preset : 'time'};
+		// opt.default = {
+		// 	theme: 'android-ics light', //皮肤样式
+		// 	display: 'modal', //显示方式 
+		// 	mode: 'scroller', //日期选择模式
+		// 	dateFormat: 'yyyy-mm-dd',
+		// 	lang: 'zh',
+		// 	showNow: true,
+		// 	nowText: "今天",
+		// 	startYear: currYear - 10, //开始年份
+		// 	endYear: currYear + 10 //结束年份
+		// };
+		// $("#startDate").mobiscroll($.extend(opt['date'], opt['default']));
+		// $("#endDate").mobiscroll($.extend(opt['date'], opt['default']));
+		$('#startDate').mobiscroll().datetime({
+            theme: 'ios',
+            mode: 'scroller',
+            display: 'bottom',
+            lang: 'zh',
+            minDate: new Date(2006,3,10,9,22),
+            maxDate: new Date(2026,7,30,15,44),
+            stepMinute: 5
+        });
+        $('#endDate').mobiscroll().datetime({
+            theme: 'ios',
+            mode: 'scroller',
+            display: 'bottom',
+            lang: 'zh',
+            minDate: new Date(2006,3,10,9,22),
+            maxDate: new Date(2026,7,30,15,44),
+            stepMinute: 5
+        });
 	});
 </script>
 {% endblock %}
