--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/new_channel_qrcode_img.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/new_channel_qrcode_img.html
@@ -18,6 +18,9 @@
     .xui-myRecPage .xui-header{
         padding-bottom: 56px;
     }
+    .wui-attentionAlert {
+        display: none;
+    }
 </style>
 {% endblock %}
 {% block content-panel %}
