微众卡充值后台优化

--- a/weapp/card/templates/card/editor/card_recharge_detail.html
+++ b/weapp/card/templates/card/editor/card_recharge_detail.html
@@ -72,7 +72,7 @@
 					        data-enable-paginator="true"
 					        data-enable-load="true"
 					        data-app="card" 
-					        data-api="all_cards/get" 
+					        data-api="all_cards/post" 
 					        data-template-id="#card_all_cards_list_view" 
 					        data-init-sort="-created_at" 
 					        data-item-count-per-page="15"
