[f_mall_member_detail][侯庭飞]30天购买频次完成

--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -342,7 +342,7 @@
 				<div class="centerAlign">${ member.pay_times }</div>
 			</td>
 			<td>
-				<div class="centerAlign">10${ member.purchase_frequency }</div>
+				<div class="centerAlign">${ member.purchase_frequency }</div>
 			</td>
 			<td>
 				<div class="centerAlign">${ member.created_at }</div>
