--- a/weapp/member/templates/member/editor/member_detail.html
+++ b/weapp/member/templates/member/editor/member_detail.html
@@ -50,7 +50,7 @@
 					<p>平均客单价</p>
 				</dd>
 				<dd>
-					<p>￥730</p>
+					<p>￥{{show_member.weizoom_card_total_money}}</p>
 					<p>微众卡使用金额</p>
 				</dd>
 				<dd>
