--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -137,11 +137,7 @@
     	float: right;
     }
     .xui-choose{
-    	display: inline-block;
-    	color: #9e9e9e;
-    	font-family: "黑体";
-    	font-size: 1rem;
-    	font-weight: 700;
+    	width: 5%;
     }
     .xui-time-input{
     	border: none;
@@ -174,7 +170,7 @@
  			{% else %}
 	 			<span>全部</span>
  			{% endif %}
- 			<span class="xa-choose xui-choose">&gt;</span>
+ 			<img class="xui-choose" src="/termite_static/img/qrcode_arrow.png"/>
 		</div>
 	</div>
 	<div class="xui-general">
