--- a/weapp/member/templates/member/editor/member_detail.html
+++ b/weapp/member/templates/member/editor/member_detail.html
@@ -174,10 +174,10 @@
 		      分享链接引流会员数量：<a href="javascript:void(0);" class="xui-color-blue friends" data-value="shared">{{shared_url_lead_number}}</a>人
 		      </span>
 		      <span class="ml50">
-		      购买转化会员数量：<a href="javascript:void(0);" class="xui-color-blue friends" data-value="purchase">00</a>人
+		      购买转化会员数量：<a href="javascript:void(0);" class="xui-color-blue friends" data-value="purchase">{{purchased_fans}}</a>人
 		      </span>
 		      <span class="ml50">
-		      转化率：70.1%
+		      转化率：{{conversion_rate}}
 		      </span>
 	      </p>
 	      <div
