[后台]【会员详情】好友列表

--- a/weapp/member/templates/member/editor/member_detail.html
+++ b/weapp/member/templates/member/editor/member_detail.html
@@ -188,6 +188,7 @@
           data-template-id="#mall-member-transmission-view"
           data-item-count-per-page="6"
           data-selectable = "false"
+          data-args='{"id": {{show_member.id}}}'
         >
         </div>
 	   	</div>
