禁止a标记锚点默认行为

--- a/weapp/member/templates/member/editor/member_detail.html
+++ b/weapp/member/templates/member/editor/member_detail.html
@@ -674,6 +674,7 @@
 {% endverbatim %}
 	<script type="text/javascript">
 	$('#tab a').click(function(event) {
+		event.preventDefault();
     $(this).tab('show');
 	});
 		var memberId = '{{ show_member.id }}';
