--- a/weapp/stats/templates/member/repeat_buy_analysis.html
+++ b/weapp/stats/templates/member/repeat_buy_analysis.html
@@ -3,7 +3,7 @@
 {% load account_filter %}
 
 {% block content-panel %}
-<div class="xui-wepage-orderSummaryPage">
+<div class="xui-wepage-BIPage xui-rePurchaseAnalyzePage">
     <div class="relative">
         <ul class="breadcrumb">
             <li>您当前所在位置</li>
@@ -13,31 +13,52 @@
     </div>
     
     <div class="xb-rightPanel pl10 pr10 pb30">
-        <div class="xui-filter xui-filterPanel ">
+        <div class="xui-filter xui-filterPanel pl35">
             会员状态：
+            <select name="" id="" class="xa-memberStateSelect">
+                <option value="all">全部</option>
+                <option value="1">已关注</option>
+                <option value="0">取消关注</option>
+            </select>
         </div>
-        <div class="xui-charWrap" style="height:400px;">
+        <div class="xui-charWrap fl" style="height:400px;">
             <div class="xui-i-title"> <div class="xui-i-block"></div><span class="ml5">会员购买占比</span></div>
-            <div 
-                class="xui-ChartBody" 
-                id="memberIncreasement" 
-                data-ui-role="statsMemberIncreasementEchart" 
-                data-app="stats" 
-                data-resource="member_increasement" 
-                data-wrap-el=".xa-message-tips-wrap"
-            ></div>
+            <div id="memberPurchaseScale" style="height:400px;"></div>
         </div>
-
-        <div class="xui-charWrap" style="height:400px;">
-            <div class="xui-i-title"> <div class="xui-i-block"></div><span class="ml5">复购会员分析</span></div>
-            <div 
-                class="xui-ChartBody" 
-                id="memberIncreasement" 
-                data-ui-role="statsMemberIncreasementEchart" 
-                data-app="stats" 
-                data-resource="member_increasement" 
-                data-wrap-el=".xa-message-tips-wrap"
-            ></div>
+        <div class="xui-charWrap fr" style="height:400px;">
+            <div class="xui-i-title"> 
+                <div class="xui-i-block"></div>
+                <span class="ml5">
+                    复购会员分析
+                    <img class="xui-i-img" id="consumption_help" src="/static_v2/img/editor/help.png"/>
+                </span>
+                <span class="fr f12 xui-setConsumption pr">
+                    <span class="xui-setConsumptionBtn">设置消费总额</span>
+                    <div class="pa xui-consumptionBox">
+                        <div class="mb10">
+                            <span>消费额区间1（元）：</span>
+                            <input type="text" placeholder="请输入整数" data-validate="require-int" class="xui-comsumptionNum xui-comsumptionNum1">&nbsp;-&nbsp;
+                            <input type="text" placeholder="请输入整数" data-validate="require-int" class="xui-comsumptionNum xui-comsumptionNum2">
+                            <div class="errorHint"></div>
+                        </div>
+                        <div class="mb10">
+                            <span>消费额区间2（元）：</span>
+                            <input type="text" placeholder="请输入整数" data-validate="require-int" class="xui-comsumptionNum xui-comsumptionNum3">&nbsp;-&nbsp;
+                            <input type="text" placeholder="请输入整数" data-validate="require-int" class="xui-comsumptionNum xui-comsumptionNum4">
+                            <div class="errorHint"></div>
+                        </div>
+                        <div class="">
+                            <span>消费额区间3（元）：</span>
+                            <input type="text" placeholder="请输入整数" data-validate="require-int" class="xui-comsumptionNum xui-comsumptionNum5">&nbsp;-&nbsp;
+                            <input type="text" placeholder="请输入整数" data-validate="require-int" class="xui-comsumptionNum xui-comsumptionNum6">
+                            <div class="errorHint"></div>
+                        </div>
+                        <div class="fr btn btn-primary m0 xui-confirm xa-confirmBtn">确认</div>
+                        <div class="cRed fr mr5">消费额区间需逐渐递增，不能交叉</div>
+                    </div>
+                </span>
+            </div>
+            <div id="rePurchaseAnalysis" style="height:400px;"></div>
         </div>
     </div>
      <div class="cb"></div>
@@ -45,5 +66,111 @@
 {% endblock %}
 
 {% block js %}
+<script type="text/javascript">
+    $(document).ready(function(){
+        var is_subscribed = 'all';
+        var search_pay_list = [];
+        $('#consumption_help').popover({
+            content : "<div class='xui-i-alert'>若区间设为（A，B），则取值包含A，但不包含B</div><div>例如：消费额区间1（元）：<span>10</span>-<span>100</span>则取值包含10，但不包含100</div>",
+            trigger : "hover",
+            html : true,
+            placement : "bottom"
+        });
 
+        $('.xa-memberStateSelect').change(function(){
+            var memberState = $(this).children('option:selected').val();
+            alert(memberState)
+            is_subscribed = memberState;
+            memberBuyPercent();
+            rePurchaseAnalysis();
+        })
+        // 会员购买占比
+        function memberBuyPercent(){
+            W.getApi().call({
+                app: 'stats',
+                resource: 'buy_percent',
+                method: 'get',
+                args: {
+                    is_subscribed: is_subscribed
+                },
+                scope: this,
+                success: function(data) {
+                    option = {
+                        // tooltip : {
+                        //     trigger: 'item',
+                        //     formatter: "{a} <br/>{b} : {c} ({d}%)"
+                        // },
+                        calculable : true,
+                        series : [
+                            {
+                                type:'pie',
+                                radius : '40%',
+                                center: ['50%', '60%'],
+                                data: data.series[0].data
+                            }
+                        ]
+                    };
+                    var theChart = echarts.init(document.getElementById('memberPurchaseScale'));  
+                    theChart.setOption(option); 
+                },
+                error: function(resp) {
+                    alert('获取统计数据失败!');
+                }
+            });
+        }
+        memberBuyPercent();
+
+        //复购会员 
+        function rePurchaseAnalysis(){
+            W.getApi().call({
+                app: 'stats',
+                resource: 'repeat_buy_analysis',
+                method: 'get',
+                args: {
+                    is_subscribed: is_subscribed,
+                    search_pay_list:search_pay_list
+                },
+                scope: this,
+                success: function(data) {
+                    option = {
+                        // tooltip : {
+                        //     trigger: 'item',
+                        //     formatter: "{a} <br/>{b} : {c} ({d}%)"
+                        // },
+                        calculable : true,
+                        series : [
+                            {
+                                type:'pie',
+                                radius : '40%',
+                                center: ['50%', '60%'],
+                                data: data.series[0].data
+                            }
+                        ]
+                    };
+                    var theChart = echarts.init(document.getElementById('rePurchaseAnalysis'));  
+                    theChart.setOption(option); 
+                },
+                error: function(resp) {
+                    alert('获取统计数据失败!');
+                }
+            });
+        }
+        rePurchaseAnalysis();
+        
+        var $confirmBtn = $('.xa-confirmBtn');
+        var $comsumptionNum = $('.xui-comsumptionNum');
+        console.log('$comsumptionNum',$comsumptionNum);
+        $confirmBtn.click(function(){
+            search_pay_list = [];
+            $comsumptionNum.map(function(i,val){
+                console.log(i,val.value)
+                var val = parseInt(val.value);
+                search_pay_list.push(val)
+            });
+            console.log('search_pay_list',search_pay_list)
+            rePurchaseAnalysis();
+        });
+
+    });
+</script>
 {% endblock %}
